Completed all functionality may add validation later

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 			<form>
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
-      			<input type="button" id="guessButton" class="button" name="submit" value="Guess"/>
+      			<input type="button" id="guessButton" class="button" value="Guess"/>
 			</form>
 			
       		<p>Guess #<span id="count">0</span>!</p>
